# askpass

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
resources/: AskPass.ui  org.undesktop.askpass.gresource.xml
src/: AskPass.vala  SafePassword.vala
